# course_work

./: .env  pyproject.toml
data/: operations.xlsx
src/: main.py  services.py  utils.py
